<resources>
    <string name="app_name">더 무비</string>
    <string name="remote_error_timeout">응답 시간이 초과되었습니다.</string>
    <string name="remote_error_network">네트워크에 연결되지 않았습니다.</string>
    <string name="remote_error_http">요청이 실패했습니다. (%1$d)</string>
    <string name="remote_error_serialization">서버 응답을 읽지 못했습니다.</string>
    <string name="remote_error_unknown">요청을 처리하지 못했습니다.</string>
    <string name="common_id_hint">아이디</string>
    <string name="common_password_hint">비밀번호</string>
    <string name="common_login">로그인하기</string>
    <string name="common_join">가입하기</string>
    <string name="common_logout">로그아웃</string>
    <string name="common_error_invalid_email">이메일 형식을 다시 확인해 주세요.</string>
    <string name="login_title">로그인</string>
    <string name="login_failed">로그인에 실패했습니다. 이메일 또는 비밀번호를 다시 확인해주세요.</string>
    <string name="login_failed_unknown">로그인에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="join_title">회원가입</string>
    <string name="join_password_confirm_hint">비밀번호 확인</string>
    <string name="join_password_match">비밀번호와 일치합니다.</string>
    <string name="join_password_mismatch">비밀번호와 일치하지 않습니다.</string>
    <string name="join_failed_blank">회원가입에 실패했습니다. 이메일 또는 비밀번호를 다시 확인해주세요.</string>
    <string name="join_succeeded">회원가입에 성공했습니다. 로그인하기 버튼을 눌러 로그인해주세요.</string>
    <string name="join_failed_exists">이미 가입한 이메일입니다.</string>
    <string name="join_failed_weak_password">비밀번호는 6자 이상으로 입력해 주세요.</string>
    <string name="join_failed_unknown">회원가입에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="join_failed_password">비밀번호가 일치하지 않습니다. 다시 확인해 주세요.</string>
    <string name="movie_list_popular_title">Popular Movie</string>
    <string name="movie_list_popular_subtitle">인기 영화</string>
    <string name="movie_list_top_rated_title">Top Rated Movie</string>
    <string name="movie_list_top_rated_subtitle">높은 평점 영화</string>
    <string name="movie_list_tab_popular">인기</string>
    <string name="movie_list_tab_top_rated">높은 평점</string>
    <string name="movie_list_tab_search">검색</string>
    <string name="movie_list_appbar_popular">오늘의 인기 영화</string>
    <string name="movie_list_appbar_search">영화 검색</string>
    <string name="search_query_hint">검색어를 입력해 주세요.</string>
    <string name="search_result_title">Search Result</string>
    <string name="search_result_subtitle">검색 결과</string>
    <string name="search_empty_result">검색 결과가 없습니다.</string>
    <string name="movie_detail_cast_title">배우 정보</string>
    <string name="movie_detail_video_title">영상</string>
    <string name="movie_detail_overview_title">줄거리</string>
    <string name="movie_detail_release">%1$s 개봉</string>
    <string name="movie_detail_rating">평점 : %1$s</string>
    <string name="review_list_title">My Reviews</string>
    <string name="review_list_subtitle">내 영화 감상문</string>
    <string name="review_list_empty">감상문이 존재하지 않습니다.</string>
    <string name="review_list_rating_label">평점 : </string>
    <string name="review_list_appbar_title">영화 감상문</string>
    <string name="review_list_sync_failed">서버의 감상문을 불러오지 못했습니다.</string>
    <string name="review_list_deleted">감상문을 삭제했습니다.</string>
    <string name="review_edit_title_hint">감상문 제목을 입력하세요</string>
    <string name="review_edit_content_hint">감상문 내용을 입력하세요</string>
    <string name="review_edit_appbar_title">영화 감상문 작성</string>
    <string name="review_edit_update">감상문 수정</string>
    <string name="review_edit_create">감상문 등록</string>
    <string name="review_edit_photo_dialog_title">사진첨부 및 삭제</string>
    <string name="review_edit_photo_dialog_message">사진을 첨부하거나 이미 첨부한 사진을 삭제하세요.</string>
    <string name="review_edit_photo_delete">삭제</string>
    <string name="review_edit_photo_gallery">갤러리</string>
    <string name="review_edit_photo_camera">카메라</string>
    <string name="review_edit_permission_title">권한이 필요합니다.</string>
    <string name="review_edit_permission_camera">더 무비앱에서 사진을 촬영하기 위해 권한이 필요합니다.</string>
    <string name="review_edit_permission_allow">허용</string>
    <string name="review_edit_permission_deny">차단</string>
    <string name="review_edit_permission_denied">권한을 거부하셨습니다.</string>
    <string name="review_edit_photo_failed">사진을 가져오지 못했습니다.</string>
    <string name="review_edit_updated">감상문이 수정되었습니다.</string>
    <string name="review_edit_created">감상문이 등록되었습니다.</string>
    <string name="review_edit_upload_failed">사진을 올리지 못했습니다. 다시 시도해주세요.</string>
    <string name="review_edit_input_required">제목과 내용을 모두 입력해주세요.</string>
    <string name="review_edit_save_failed">감상문을 저장하지 못했습니다. 다시 시도해주세요.</string>
    <string name="review_edit_load_failed">감상문을 불러오지 못했습니다.</string>
    <string name="map_appbar_title">내 근처 영화관</string>
    <string name="map_permission_denied">권한을 부여받지 못했습니다.</string>
    <string name="map_permission_settings_title">위치 권한이 필요합니다.</string>
    <string name="map_permission_settings_message">내 주변 영화관을 찾으려면 위치 권한이 필요해요. 설정에서 위치 권한을 허용해 주세요.</string>
    <string name="map_permission_settings_move">설정으로 이동</string>
    <string name="map_permission_settings_cancel">취소</string>
    <string name="map_location_unavailable">위치 정보를 갱신하지 못했습니다.</string>
    <string name="map_location_retry">다시 시도</string>
    <string name="map_current_location">현재 위치</string>
    <string name="map_load_failed">지도를 불러오지 못했습니다.</string>
    <string name="map_theater_eyebrow">영화관</string>
    <string name="map_theater_directions">길찾기</string>
    <string name="map_theater_distance_meters">%1$dm</string>
    <string name="map_theater_distance_kilometers">%1$.1fkm</string>
    <string name="map_directions_unavailable">길찾기를 열 수 있는 앱이 없습니다.</string>
    <!-- 채널 id가 번역으로 바뀌면 기기에 새 채널이 생겨 사용자가 바꾼 알림 설정이 이어지지 않으므로, 번역 대상에서 제외 -->
    <string name="notification_channel_id" translatable="false">The Movie Channel Id</string>
    <string name="notification_channel_name">The Movie</string>
    <string name="notification_channel_description">The Movie 채널</string>
    <string name="notification_settings_menu">알림 설정</string>
    <string name="notification_prompt_title">알림을 받아 보시겠어요?</string>
    <string name="notification_prompt_message">새로 개봉하는 영화와 추천 영화 소식을 알림으로 보내 드려요.</string>
    <string name="notification_prompt_allow">허용</string>
    <string name="notification_prompt_later">나중에</string>
    <string name="notification_permission_denied">알림을 받으려면 메뉴의 알림 설정에서 허용해 주세요.</string>
</resources>
