<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:layout_width="260dp"
        android:layout_height="140dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="56dp"
        android:scaleType="fitCenter"
        android:src="@drawable/the_movie"
        app:tint="?attr/colorOnSurface" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="356dp"
                android:layout_height="62dp"
                android:layout_marginBottom="20dp"
                android:gravity="bottom"
                android:text="@string/login_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/idInput"
                android:layout_width="356dp"
                android:layout_height="58dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/input_bg"
                android:hint="@string/common_id_hint"
                android:paddingLeft="27dp"
                android:textColorHint="?attr/colorOnSurfaceVariant"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/pwInput"
                android:layout_width="356dp"
                android:layout_height="58dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/input_bg"
                android:hint="@string/common_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="27dp"
                android:textColorHint="?attr/colorOnSurfaceVariant"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="356dp"
                android:layout_height="58dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/login"
                android:gravity="center"
                android:text="@string/common_login"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/joinBtn"
                android:layout_width="356dp"
                android:layout_height="62dp"
                android:gravity="right"
                android:text="@string/common_join"
                android:textColor="?attr/colorTertiary"
                android:textSize="18dp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>