<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.TheMovie.Toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        tools:context=".movie.MovieDetailActivity">

        <ImageView
            android:id="@+id/imagePoster"
            android:layout_width="148dp"
            android:layout_height="202dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="193dp"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:ellipsize="end"
            android:lines="2"
            android:textColor="?attr/colorOnSurface"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:text="TextView"
            app:layout_constraintBottom_toTopOf="@id/textRelease"
            app:layout_constraintLeft_toRightOf="@id/guideline3" />

        <TextView
            android:id="@+id/textRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="17dp"
            tools:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintLeft_toRightOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="17dp"
            tools:text="평점 : "
            app:layout_constraintLeft_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/textRelease" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:max="10"
            android:numStars="5"
            android:progressTint="?attr/colorTertiary"
            android:stepSize="0.1"
            app:layout_constraintLeft_toRightOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/textGrade" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="241dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="163dp"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="5dp"
                android:text="@string/movie_detail_cast_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="25dp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/creditsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp" />

            <TextView
                android:id="@+id/textViewVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/movie_detail_video_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="25dp"
                android:textStyle="bold" />

            <!--
            <fragment
                android:id="@+id/youtubePlayerViewFragment"
                android:name="com.google.android.youtube.player.YouTubePlayerFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />
            -->

            <TextView
                android:id="@+id/textViewOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="10dp"
                android:text="@string/movie_detail_overview_title"
                android:textColor="?attr/colorOnSurface"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="5dp"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18dp"
                tools:text="TextView" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
